# src/app.js
@@ -1,20 +1,23 @@
-import express from "express";
-import morgan from "morgan";
-import cors from "cors";
-import userRouter from "./routes/userRoute";
-import boardRouter from "./routes/boardRouter";
+import express from 'express';
+import morgan from 'morgan';
+import cors from 'cors';
+import userRouter from './routes/userRoute';
+import boardRouter from './routes/boardRouter';
+import swaggerUi from 'swagger-ui-express';
+import YAML from 'yamljs';
 
+const path = require('path');
+const swaggerSpec = YAML.load(path.join(__dirname, '../build/swagger.yaml'));
 const app = express();
+app.set('views', __dirname + '/views');
+app.use('/public', express.static(__dirname + '/public'));
 
-app.set("views", __dirname + "/views");
-app.use("/public", express.static(__dirname + "/public"));
-
-app.use(morgan("dev"));
+app.use(morgan('dev'));
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 app.use(cors());
-
-app.use("/user", userRouter);
-app.use("/boards", boardRouter);
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
+app.use('/user', userRouter);
+app.use('/boards', boardRouter);
 
 export default app;
